crates/torrentctl/src/screens/snapshots/torrentctl__screens__torrents__tests__torrents_detail_overview_80x24.snap
---
source: crates/torrentctl/src/screens/torrents.rs
expression: screen
---
╭ debian-13.1.0-amd64-netinst.iso · 01a1b2c3d4e5 ──────────────────────────────╮
│ Overview │ Files │ Trackers │ Actions                                        │
│                                                                              │
│        infohash  01a1b2c3d4e5a1b2c3d4e5a1b2c3d4e5a1b2c3d4                    │
│         profile  acct_a                                                      │
│           phase  ● seeding                                                   │
│        progress  100.0%                                                      │
│     upload rate  1.5 MiB/s                                                   │
│   download rate  —                                                           │
│        uploaded  5.0 GiB                                                     │
│payload uploaded  4.7 GiB                                                     │
│           peers  3                                                           │
│        finished  yes                                                         │
│         seeding  yes                                                         │
│                                                                              │
│         session                                                              │
│            name  debian-13.1.0-amd64-netinst.iso                             │
│            size  756.0 MiB                                                   │
│       save path  /srv/seed/acct_a                                            │
│    upload limit  2.0 MiB/s                                                   │
│           added  2026-09-01 08:30 UTC (20d 5h ago)                           │
│                                                                              │
│                                                                              │
╰ ←/→ tab  Esc back  p/r pause/resume  l limit ────────────────────────────────╯
